Update timeline: Fix overlapping buffs preventing the tooltip of the first buff from showing

--- a/src/interface/report/Results/Timeline/Timeline.scss
+++ b/src/interface/report/Results/Timeline/Timeline.scss
@@ -175,6 +175,7 @@
   width: 100%;
   border-radius: 10px;
   position: relative;
+  z-index: 0; // this relativizes the nested z-indexes so they don't overlap casts
   bottom: -22px;
   height: calc(30px + var(--levels) * 30px);
   box-sizing: content-box;
@@ -184,7 +185,10 @@
     height: 100%;
   }
   a {
-    z-index: 3;
+    --level: 0;
+    z-index: 3; // fallback
+    // Inverse z-index from the level so that if a buff overlaps, the lowest level will get the highest z-index. This works because newer levels are higher so can still be hovered.
+    z-index: calc(100 - var(--level));
     display: block;
   }
   a img {
@@ -197,7 +201,6 @@
   }
   //noinspection CssOverwrittenProperties
   a.hoist {
-    --level: 0;
     height: 22px;
     bottom: 13px;
     bottom: calc(35px + var(--level) * 30px);
@@ -217,7 +220,9 @@
     border-top-right-radius: 5px;
     background: hsla(41, 10%, 68%, 0.2);
     box-shadow: 0 0 3px #000;
-    z-index: 2;
+    z-index: 2; // fallback
+    // Inverse z-index from the level so that if a buff overlaps, the lowest level will get the highest z-index. This works because newer levels are higher so can still be hovered.
+    z-index: calc(99 - var(--level));
     height: calc(50px + var(--level) * 30px);
     --level: 0;
     bottom: 0;
